package ac.uk.brunel.contextaware;

option java_package = "ac.uk.brunel.contextaware.network.generated";

message MeetingBtAddresses {
    required string meetingId = 1;
    required string bluetoothAddresses = 2;
}